better readability; responsive fixes

--- a/css/ntp.css
+++ b/css/ntp.css
@@ -11,11 +11,20 @@
 	src: url(chrome-extension://__MSG_@@extension_id__/fonts/Roboto-Thin.woff2);
 }
 
+* {
+	box-sizing: border-box;
+}
+*:before,
+*:after {
+	box-sizing: border-box;
+}
+
 /**
  * Modifies the Google NTP into a Google Now styled page.
  */
 body {
-	background-color: #ececec !important;
+	/* background-color: #ececec !important; */
+	line-height: 1.42857143 !important;
 }
 
 /* removes the search */
@@ -208,6 +217,7 @@ a[href^="http://"] > img {
 .box__content h2 {
 	font-size: 20px;
 	font-weight: normal;
+	line-height: 1;
 }
 
 .box__item {
@@ -308,7 +318,7 @@ a[href^="http://"] > img {
 #box-weather .box__item--title {
 	color: black;
 	font-size: 75px;
-	margin-left: -25px;
+	margin-left: -20px;
 	line-height: 1.1;
 }
 
@@ -514,6 +524,17 @@ input.cmn-toggle-round:checked + label:before {
 input.cmn-toggle-round:checked + label:after {
 	margin-left: 30px;
 }
+
+.img-responsive {
+	max-width: 100%;
+	height: auto;
+	display: block;
+}
+
+img {
+	vertical-align: middle;
+}
+
 
 /* Range */
 input[type='range'] {
